...
        ratio={document.canvas.ratio}
      />
    );
  };

  return (
    <SafeAreaView edges={["top", "bottom"]} style={styles.root} testID="editor-screen">
      <KeyboardAvoidingView
        behavior={Platform.OS === "ios" ? "padding" : undefined}
        keyboardVerticalOffset={0}
        style={styles.keyboardLayout}
      >
        <EditorHeader
...
