appId: com.leonzym.plogkit
---
- runFlow: launch-app.yaml
- assertVisible:
    id: choose-photos
- tapOn:
    id: choose-photos
- runFlow:
    when:
      platform: iOS
    file: select-two-photos-ios.yaml
- runFlow:
    when:
      platform: Android
    file: select-two-photos-android.yaml
- extendedWaitUntil:
    visible:
      id: editor-screen
    timeout: 30000
- assertVisible: 2 photos
