appId: com.leonzym.plogkit
name: Change background color and output ratio
tags:
  - F02-S01
  - F02-S02
---
- runFlow: ../subflows/import-two-photos.yaml
- tapOn:
    id: background-color-e8d8bd
- tapOn:
    id: canvas-ratio-4:5
- assertVisible: 4:5
- tapOn:
    id: editor-undo
- tapOn:
    id: editor-redo
